@@ -13,7 +13,7 @@ use Getopt::Long qw(GetOptions);
 use Cwd;
 
 sub gource_version {
-    my $version = `cat $FindBin::Bin/../../src/gource.h | grep GOURCE_VERSION`;
+    my $version = `cat $FindBin::Bin/../../src/gource_settings.h | grep GOURCE_VERSION`;
     $version =~ /"([^"]+)"/ or die("could not determine version\n");
     $version = $1;
     return $version;
