@@ -1,4 +1,5 @@
 0.27:
+ * Added ini style config file support.
  * Added --dont-stop and --stop-at-time options.
  * Added --log-command option to use instead of multiple --log-command-VCS options.
  * Allow --file-idle-time 0 (files will never expire).
